# tamara

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
tests/: __init__.py  authorise_order.py  capture.py  check_payment_options_availability.py  create_checkout_session.py  get_payment_types.py
